Fixed Heal Cost + added gallery beta access